--- a/ktra.css
+++ b/ktra.css
@@ -15,6 +15,14 @@
   padding-left: 200px;
   padding-right: 200px;
 }
+.menu:hover{
+  background-color: rgb(183, 69, 8);
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  padding-left: 200px;
+  padding-right: 200px;
+}
 .content
 {
   display: grid;
@@ -36,6 +44,10 @@
   width: 80%;
   height: 80%;
 }
+.bottomleft a:visited 
+{
+  color: rgb(62, 211, 25);
+}
 .right{
   background-color:rgb(227, 233, 170);
   border-radius: 10px;
@@ -52,10 +64,14 @@
   width:80%;
   height:80%;
 }
+.content_right a:visited
+{
+  color: brown;
+}
 .contact
 {
-display: grid;
-grid-template-columns: 50% 40%;
+  display: grid;
+  grid-template-columns: 50% 40%;
 }
 .contactleft{
   border: 1px solid greenyellow;
@@ -89,6 +105,14 @@ grid-template-columns: 50% 40%;
   padding-right: 50px;
   font-size: 20px;
 }
+.menu:hover{
+  background-color: rgb(8, 131, 183);
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  padding-left: 200px;
+  padding-right: 200px;
+}
 .content
 {
   display: grid;
@@ -113,6 +137,10 @@ grid-template-columns: 50% 40%;
   width: 80%;
   height: 80%;
 }
+.bottomleft a:visited 
+{
+  color: rgb(25, 124, 211);
+}
 .right{
   background-color:rgb(227, 233, 170);
   border-radius: 10px;
@@ -130,6 +158,10 @@ grid-template-columns: 50% 40%;
 .content_right img{
   width: 90%;
   height: 66%;
+}
+.content_right a:visited
+{
+  color: brown;
 }
 .contact
 {
@@ -175,6 +207,14 @@ grid-template-columns: 50% 40%;
     padding-left: 250px;
     padding-right: 250px;
   }
+  .menu:hover{
+    background-color: rgb(183, 69, 8);
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    padding-left: 200px;
+    padding-right: 200px;
+  }
   .content
   {
     display: grid;
@@ -193,6 +233,10 @@ grid-template-columns: 50% 40%;
     width: 90%;
     height: 90%;
   }
+  .bottomleft a:visited 
+{
+  color: rgb(25, 124, 211);
+}
   .right{
     background-color:rgb(227, 233, 170);
     border-radius: 10px;
@@ -211,6 +255,10 @@ grid-template-columns: 50% 40%;
     width: 90%;
     height: 66%;
   }
+  .content_right a:visited
+{
+  color: brown;
+}
   .contact
   {
   display: grid;
