--- a/ktra.css
+++ b/ktra.css
@@ -44,9 +44,9 @@
   width: 80%;
   height: 80%;
 }
-.bottomleft a:visited 
+.a:active 
 {
-  color: rgb(62, 211, 25);
+  color: rgb(25, 31, 211);
 }
 .right{
   background-color:rgb(227, 233, 170);
@@ -63,10 +63,6 @@
 .content_right img{
   width:80%;
   height:80%;
-}
-.content_right a:visited
-{
-  color: brown;
 }
 .contact
 {
@@ -108,10 +104,12 @@
 .menu:hover{
   background-color: rgb(8, 131, 183);
   display: flex;
-  justify-content: space-between;
+  font-size: smaller;
+  justify-content: space-around;
   color: white;
-  padding-left: 200px;
-  padding-right: 200px;
+  padding-left: 50px;
+  padding-right: 50px;
+  font-size: 20px;
 }
 .content
 {
@@ -126,7 +124,6 @@
   font-size: 10px;
   
 }
-
 .bottomleft
 {
   display: grid;
@@ -136,10 +133,6 @@
 {
   width: 80%;
   height: 80%;
-}
-.bottomleft a:visited 
-{
-  color: rgb(25, 124, 211);
 }
 .right{
   background-color:rgb(227, 233, 170);
@@ -158,10 +151,6 @@
 .content_right img{
   width: 90%;
   height: 66%;
-}
-.content_right a:visited
-{
-  color: brown;
 }
 .contact
 {
@@ -233,10 +222,6 @@ grid-template-columns: 50% 40%;
     width: 90%;
     height: 90%;
   }
-  .bottomleft a:visited 
-{
-  color: rgb(25, 124, 211);
-}
   .right{
     background-color:rgb(227, 233, 170);
     border-radius: 10px;
@@ -255,10 +240,6 @@ grid-template-columns: 50% 40%;
     width: 90%;
     height: 66%;
   }
-  .content_right a:visited
-{
-  color: brown;
-}
   .contact
   {
   display: grid;
